Fix insta embeds spill over on large screens

--- a/src/style.css
+++ b/src/style.css
@@ -253,6 +253,15 @@ footer a:hover {
   color: rgba(255, 255, 255, 0.75);
 }
 
+@media (max-width: 1240px) {
+  .hidden {
+    display: none;
+  }
+  .two-columns-large {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 @media (max-width: 900px) {
   .one-column-responsive {
     grid-template-columns: 1fr;
